--- a/conexao-vs-com-postgresql/dao/exemplo.dao.csproj
+++ b/conexao-vs-com-postgresql/dao/exemplo.dao.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Modelo\Modelo.csproj" />
+    <ProjectReference Include="..\Modelo\exemplo.modelo.csproj" />
   </ItemGroup>
 
 </Project>
